@@ -90,7 +90,7 @@
 
       <varlistentry>
         <term><emphasis role="bold">CHAIN:STATE -
-        {P|I|F|O|T}[:{N|NI|E|ER}]</emphasis></term>
+        {P|I|F|O|T}[:{N|I|NI|E|ER}]</emphasis></term>
 
         <listitem>
           <para>This column determines the CHAIN where the SElinux context is
@@ -114,6 +114,8 @@
 
           <simplelist>
             <member>:N - NEW connection</member>
+
+            <member>:I - INVALID connection</member>
 
             <member>:NI - NEW or INVALID connection</member>
 
