@@ -90,7 +90,7 @@
 
       <varlistentry>
         <term><emphasis role="bold">CHAIN -
-        {P|I|F|O|T}[:{N|NI|E|ER}]</emphasis></term>
+        {P|I|F|O|T}[:{N|I|NI|E|ER}]</emphasis></term>
 
         <listitem>
           <simplelist>
@@ -111,6 +111,8 @@
 
           <simplelist>
             <member>:N - NEW connection</member>
+
+            <member>:I - INVALID connection</member>
 
             <member>:NI - New or INVALID connection</member>
 
