@@ -2,7 +2,7 @@ Changes in Shorewall 4.4.20 Final
 
 1)  Set /proc/sys/net/bridge/bridge_nf_call_ip6?tables.
 
-2)  Add 'NI' STATE in secmarks.
+2)  Add 'I' and 'NI' STATEs in secmarks.
 
 Changes in Shorewall 4.4.20 RC 1
 
