@@ -253,7 +253,8 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     versions are available in the configfiles directory within the
     tarball.
 
-11) The STATE subcolumn of the secmarks file now allow the value 'NI'
+11) The STATE subcolumn of the secmarks file now allows the values 'I'
+    which will match packets in the INVALID state, and 'NI'
     which will match packets in either NEW or INVALID state.
 
 ----------------------------------------------------------------------------
